--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ logging.level.org.springframework = debug
 spring.messages.basename=messages
 
 management.endpoints.web.exposure.include=*
+
+spring.security.user.name=shahin
+spring.security.user.password=abbas
