--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,13 @@ spring.messages.basename=messages
 
 management.endpoints.web.exposure.include=*
 
-spring.security.user.name=shahin
-spring.security.user.password=abbas
+#spring.security.user.name=shahin
+#spring.security.user.password=abbas
+
+spring.datasource.url=jdbc:h2:./data/demo
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.username=shahin
+spring.datasource.password=abbas
