--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.username=shahin
 spring.datasource.password=abbas
+spring.jpa.hibernate.ddl-auto=update
