--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.username=shahin
 spring.datasource.password=abbas
 spring.jpa.hibernate.ddl-auto=update
+spring.security.user.name=shahin
+spring.security.user.password=abbas
