--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.username=shahin
 spring.datasource.password=abbas
 spring.jpa.hibernate.ddl-auto=update
+application.jwt.secureKey =shahin created this long ass string for more security and it is working like a charm
+application.jwt.tokenPrefix=Bearer 
+application.jwt.tokenExpirationAfterDays=14
